--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
   "devDependencies": {
     "@types/fs-extra": "^9.0.1",
     "@types/node": "^14.0.24",
+    "@vercel/ncc": "^0.27.0",
     "eslint": "^7.5.0",
     "husky": "^4.2.5",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "typescript": "^4.2.3"
   }
 }
