--- a/package.json
+++ b/package.json
@@ -25,18 +25,18 @@
   },
   "homepage": "https://github.com/fortify/gha-setup-scancentral-client#readme",
   "dependencies": {
-    "@actions/core": "^1.5.0",
-    "@actions/tool-cache": "^1.7.1",
-    "fs-extra": "^10.0.0",
+    "@actions/core": "^1.9.1",
+    "@actions/tool-cache": "^1.7.2",
+    "fs-extra": "^10.1.0",
     "path": "^0.12.7"
   },
   "devDependencies": {
-    "@types/fs-extra": "^9.0.12",
-    "@types/node": "^16.9.4",
+    "@types/fs-extra": "^9.0.13",
+    "@types/node": "^16.11.56",
     "@vercel/ncc": "^0.31.1",
     "eslint": "^7.32.0",
-    "husky": "^7.0.0",
-    "prettier": "^2.4.0",
-    "typescript": "^4.4.3"
+    "husky": "^7.0.4",
+    "prettier": "^2.7.1",
+    "typescript": "4.4.3"
   }
 }
